# picoauth

./: .gitignore  Cargo.toml  Dockerfile  README.md  curls.sh
migrations/: 1738467005_initial-migration.down.sql  1738467005_initial-migration.up.sql  schema.sql
src/: common.rs  db.rs  jwt.rs  main.rs  password.rs  totp.rs
src/routes/: health_check.rs  mod.rs  register.rs
src/routes/admin/: mod.rs  user.rs  users.rs
src/routes/auth/: forgot_password.rs  login.rs  logout_from_all.rs  me.rs  mod.rs  register.rs
src/routes/jwt/: mod.rs  refresh.rs  validate.rs
stresstest/: script.js
