[package]
name = "picoauth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
axum = { version = "0.8.1", features = ["macros"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
libsql = { version = "0.6.0", features = ["encryption"] }
rand = { version = "0.9.0", features = ["std"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
totp-rs = { version = "5.6.0", features = ["otpauth"] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "compression-zstd",
    "normalize-path",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
